# GameOfLife

./: CMakeLists.txt  README.md
code/: main.cpp
cuda_code/: CMakeLists.txt
cuda_code/src/: main.cu
